--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,7 @@ body,
 #root > div {
     height: 100%;
 }
+
+.vertical-spacer {
+    height: 2em;
+}
